--- a/index.html
+++ b/index.html
@@ -1,13 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <title>Conversor de moedas</title>
 </head>
+
 <body>
+
+    <img src="./assets/logo.gif" alt="Logo conversor de moedas">
     
+    <main>
+
+        <label>
+        Converter <b>de</b>
+        <select>
+            <option>R$ Real</option>
+        </select>
+        </label>
+
+        <label>
+        Converter <b>para</b>
+        <select>
+            <option>US$ Dólar Americano</option>
+            <option>€ Euro</option>
+        </select>  
+        </label>          
+
+        <label>
+            Valor
+            <input placeholder="10.000,00">
+
+            <button>Converter</button>
+        </label>
+
+    </main>
+
+    <section>
+        
+        <div>
+            <img src="./assets/brazil.png" alt="currency-to-convert">
+            <p>Real</p>
+            <p>R$ 10.000,00</p>
+        </div>
+
+        <img src="./assets/arrow.png" alt="arrow">
+        <div>
+            <img src="./assets/usa.png" alt="converted-currency">
+            <p>US$ 2.000,00</p>
+        </div>
+
+
+    </section>
 </body>
 </html>
