--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
     <body>
+    ...existing code...
 
         <img id="logo" src="./assets/logo.gif" alt="Logo conversor de moedas">
         
@@ -35,14 +36,14 @@
                 <option>€ Euro</option>
             </select> 
 
-            </label>          
+            </label>                   
 
             <label>
 
                 Valor
-                <input placeholder="10.000,00">
+                <input id="input-currency" placeholder="10.000,00">
 
-                <button>Converter</button>
+                <button id="convert-button">Converter</button>
 
             </label>
 
@@ -67,5 +68,6 @@
 
         </main>
         
+    <script src="scripts.js"></script>
     </body>
 </html>
