--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="currency-box">
                     <img class="currency-img" src="./assets/brazil.png" alt="currency-to-convert">
                     <p class="currency">Real</p>
-                    <p class="currency-value">R$ 10.000,00</p>
+                    <p class="currency-value-to-convert">R$ 10.000,00</p>
                 </div>
 
                 <img id="arrow" src="./assets/arrow.png" alt="arrow">
