--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <label>
 
             Converter <b>para</b>
-            <select>
-                <option>US$ Dólar Americano</option>
-                <option>€ Euro</option>
-            </select> 
+            <select id="currency-select">
+                <option value="USD">US$ Dólar Americano</option>
+                <option value="EUR">€ Euro</option>
+            </select>
 
             </label>                   
 
@@ -50,7 +50,7 @@
             <section>
                 
                 <div class="currency-box">
-                    <img class="currency-img" src="./assets/brazil.png" alt="currency-to-convert">
+                    <img src="./assets/brazil.png" alt="currency-to-convert">
                     <p class="currency">Real</p>
                     <p class="currency-value-to-convert">R$ 10.000,00</p>
                 </div>
@@ -58,8 +58,8 @@
                 <img id="arrow" src="./assets/arrow.png" alt="arrow">
 
                 <div class="currency-box">
-                    <img class="currency-img" src="./assets/usa.png" alt="converted-currency">
-                    <p class="currency">Dólar</p>
+                    <img id="currency-img"src="./assets/usa.png" alt="converted-currency">
+                    <p class="currency" id="currency-name">Dólar</p>
                     <p class="currency-value">US$ 2.000,00</p>
                 </div>
 
