--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             <select id="currency-select">
                 <option value="USD">US$ Dólar Americano</option>
                 <option value="EUR">€ Euro</option>
+                <option value="GBP">£ Libra Esterlina</option>
+                <option value="BTC">₿ Bitcoin</option>
             </select>
 
             </label>                   
